---
title: "Team 05: CoolPhoneApp ER Model"
---
erDiagram
    %% mmdc -i er_model_mermaid.mmd -o er_model.png --scale 4

    users {
        int *user_id
        varchar username
        varchar password
        varchar last_name
        varchar first_name
        bigint phone_number
        varchar phone_model
        bool admin
    }

    users ||--o{ data_log : "logs data usage to"
    users ||--|| bank : "has"
    users ||--o{ call_log : "logs calls to"
    users ||--o{ transaction : "makes"
    users }o--|| phone : "has"
    
    user_plan {
        int *user_id
        varchar plan_type
        varchar payment_type
    }

    user_plan }o--|| plan : "has"

    phone {
        varchar *model
        varchar brand
    }
    
    call_log {
        int *call_id
        int user_id
        decimal duration
        timestamp call_date_time
        varchar call_type
        bigint num_called
    }
    call_log }o--|| call_type : "has"
    
    data_log {
        int *user_id
        date *month
        int monthly_data_mib
        int data_used_mib
    }

    data_log }o--|| plan : "tracks data limit"
    
    call_type {
        varchar *type_name
        decimal cost_per_minute
    }
    
    plan {
        varchar *plan_type
        varchar *payment_type
        int call_limit_min
        int data_limit_mib
        decimal data_cost
    }
    
    bank {
        int *user_id
        int bank_account_num
        int card_num
        varchar bank_name
    }
    
    transaction {
        int *bill_id
        date date_paid
    }
    
    transaction ||--|| bill : "pays bill"

    bill {
        int *bill_id
        int user_id
        decimal cost
        date due_date
        bool paid
    }

    bill ||--|{ call_log : "derives cost"
    bill ||--|{ user_plan : "derives cost"

    %% has to go down here to avoid line crossing
    users ||--|| user_plan : "has"
